feat: Look up config file from file being linted
fixes #18385

--- a/package.json
+++ b/package.json
@@ -71,9 +71,9 @@
     "@eslint/config-array": "^0.17.1",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "9.8.0",
+    "@humanfs/node": "^0.16.3",
     "@humanwhocodes/module-importer": "^1.0.1",
     "@humanwhocodes/retry": "^0.3.0",
-    "@nodelib/fs.walk": "^1.2.8",
     "ajv": "^6.12.4",
     "chalk": "^4.0.0",
     "cross-spawn": "^7.0.2",
